integracion funcionalidades basicas de angular

--- a/src/app/persona/persona.component.html
+++ b/src/app/persona/persona.component.html
@@ -1,10 +1,9 @@
-<p>
-  Nombre: {{ getNombre() }} Apellido: {{ getApellido() }} Edad:
-  {{ getEdad() + 1 }}
-</p>
-<!-- evento para liberar cualquier tecla -->
-<div (keyup)="(0)">
-  <label for="">repetidor: </label>
+<!-- <p>Nombre: {{ getNombre() }}</p>
+<p>Apellido: {{ getApellido() }}</p>
+<p>Edad: {{ getEdad() + 1 }}</p> -->
+<!-- evento para liberar cualquier tecla el 0 es que lo libere inmediatamente-->
+<!-- <div (keyup)="(0)">
+  <label>repetidor:</label>
   <input #entrada />
   {{ entrada.value }}
-</div>
+</div> -->
