--- a/src/app/personas/personas.component.html
+++ b/src/app/personas/personas.component.html
@@ -2,7 +2,18 @@
   <div class="row">
     <div class="col">
       <h1>listado de Personas</h1>
+      <button
+        class="btn btn-primary"
+        [disabled]="desabilitar"
+        (click)="agregarPersona()"
+      >
+        Agregar persona
+      </button>
+      <p>{{ mensaje }}</p>
       <app-persona></app-persona>
+      <label>Titulo persona</label>
+      <input type="text" class="form-control" [(ngModel)]="titulo" />
+      {{ titulo }}
     </div>
   </div>
 </div>
